[project]
name = "scambait-tools"
version = "0.1.0"
description = "This project contains several python scripts that can be used against scammers amd scammer websites."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.0.0",
    "httpx>=0.28.1",
    "playwright>=1.50.0",
    "requests>=2.32.3",
    "typer>=0.15.2",
]
license = {text = "WTFPL"}

[dependency-groups]
dev = [
    "black>=25.1.0",
]
